# gh-actions-test

./: .clang-format  .clang-tidy  .cspell.json  .flake8  .gitattributes  .gitignore  CMakeConanPresets.json  CMakeLists.txt  CMakePresets.json  CMakePresets.orig.json  CMakeUserPresets.json  FixMe.txt  README.md  conan_install.py  conan_install.sh  conanfile.py  conanfile.txt
.devcontainer/: Dockerfile  Readme.md  devcontainer.json
.devcontainer/scripts/: .gitattributes  postCreateCommand.sh  postCreateCommand.sh.bak  postStartCommand.sh
.dictionaries/: dev_terms.txt  words.txt
.github/: dependabot.yml  labeler.yml
.github/config/: spellcheck-wordlist.txt  spellcheck.yml
.github/workflows/: clang-tidy-review.yml  cmake-self-hosted.yml  cmake.yml  cmake_linux.yml  cmake_macos.yml  cmake_windows.yml  codeql.yml  cpp-linter.yml  fossa.yml  labeler.yml  pylint.yml  python-lint.yml  spellcheck.yml  stale.yml
cmake/presets/: Clang.json  Common.json  GnuC.json  OS.json  clang-libcpp.json  clang.json  common.json  gnuc.json  msvc-cl.json  msvc.json  os.json
scripts/: hello.py
source/: CMakeLists.txt  main.cpp
testsuite/: CMakeLists.txt  test_me.cpp
